# PalmTree

./: .gitignore  LICENSE  README.md  palmtree_conda.yaml  pyproject.toml  requirements.txt
pre-trained_model/: README.md  config.py  eval_utils.py  how2use.py  requirements.txt  vocab.py
pre-trained_model/palmtree/: vocab
src/: config.py  registers.py  train_palmtree.py
src/data_generator/: control_flow_gen.py  dataflow_gen.py
src/extrinsic_evaluation/EKLAVYA/: how_to_run
src/extrinsic_evaluation/EKLAVYA/code/RNN/test/: dataset.py  dataset_caller.py  eval.py
src/extrinsic_evaluation/EKLAVYA/code/RNN/train/: config.py  data_loader.py  dataset.py  dataset_caller.py  eval_utils.py  model.py  split_function_path_gen.py  train.py  train_rnn.py  transformer.py  vocab.py
src/extrinsic_evaluation/EKLAVYA/code/embedding/: insn_int.py  prep_embed_input.py  save_embeddings.py  train_embed.py
src/extrinsic_evaluation/EKLAVYA/smalldata/pickles/x64/: clang-64-O0-binutils-elfedit.pkl  clang-64-O1-binutils-elfedit.pkl  clang-64-O2-binutils-elfedit.pkl  clang-64-O3-binutils-elfedit.pkl  gcc-64-O0-binutils-elfedit.pkl  gcc-64-O1-binutils-elfedit.pkl  gcc-64-O2-binutils-elfedit.pkl  (+1 more)
src/extrinsic_evaluation/gemini/: config.py  data_loader.py  eval_utils.py  gemini_feature_extraction_palmtree.py  registers.py  vocab.py
src/extrinsic_evaluation/gemini/embedding/: dataset.py  emb_train.py  embedding.py  obj.py  siamese_emb.py  util.py
src/palmtree/dataset/: dataset.py  vocab.py
src/palmtree/model/: bert.py  language_model.py
src/palmtree/trainer/: pretrain.py
